force-app/main/default/objects/Event__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>The date and time the event ends.</description>
    <inlineHelpText>Enter the date and time the event ends.</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>