force-app/main/default/objects/Event__c/fields/Event_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer__c</fullName>
    <description
  >The organizer responsible for this event. Deleting the organizer deletes this event.</description>
    <inlineHelpText
  >Select the organizer responsible for this event.</inlineHelpText>
    <label>Event Organizer</label>
    <referenceTo>Event_Organizer__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>MasterDetail</type>
</CustomField>