force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the event is currently live/in progress.</description>
    <inlineHelpText
  >Check this box if the event is currently live.</inlineHelpText>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>