force-app/main/default/objects/Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The location where this event takes place.</description>
    <inlineHelpText
  >Select the location where this event takes place.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>