force-app/main/default/objects/Event__c/fields/Location_Verified__c.field-meta.xml
<CustomField>
    <fullName>Location_Verified__c</fullName>
    <description
  >Formula that mirrors the Verified status of this event's related Location record.</description>
    <formula>Location__r.Verified__c</formula>
    <inlineHelpText
  >Shows whether the event's location has been verified.</inlineHelpText>
    <label>Location Verified</label>
    <type>Checkbox</type>
</CustomField>