force-app/main/default/objects/Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description
  >The maximum number of attendees who can register for this event.</description>
    <inlineHelpText
  >Enter the maximum number of seats available for this event.</inlineHelpText>
    <label>Max Seats</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>