force-app/main/default/objects/Event__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description
  >The display name/title of the event, distinct from the auto-generated event number.</description>
    <inlineHelpText>Enter the title of the event.</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>