force-app/main/default/objects/Event__c/fields/PeopleAttending__c.field-meta.xml
<CustomField>
    <fullName>PeopleAttending__c</fullName>
    <description
  >Roll-up count of related Event_Attendee__c records, representing how many people are registered for this event.</description>
    <inlineHelpText
  >Automatically counts the number of attendees registered for this event.</inlineHelpText>
    <label>People Attending</label>
    <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>