force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether this event repeats on a schedule rather than occurring once.</description>
    <inlineHelpText
  >Check this box if the event repeats on a schedule rather than occurring once.</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>