force-app/main/default/objects/Event__c/fields/Remaining_Seats__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Seats__c</fullName>
    <description
  >Formula showing how many seats are still available, calculated as Max Seats minus People Attending.</description>
    <formula>Max_Seats__c -  PeopleAttending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the number of seats still available for this event.</inlineHelpText>
    <label>Remaining Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>