force-app/main/default/objects/Event__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>The date and time the event begins.</description>
    <inlineHelpText>Enter the date and time the event starts.</inlineHelpText>
    <label>Start Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>